[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pem"
version = "0.0.0"
authors = [
  { name="Ishan Gaur", email="ishangaur@gmail.com" },
]
description = "Protein Editing Model"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ishan-gaur/pem"
