[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "afm"
version = "0.0.0"
authors = [
  { name="Ishan Gaur", email="ishangaur@gmail.com" },
]
description = "Action Flow Model"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ishan-gaur/afm"
